# cmaketemplate

./: .gitignore  CMakeLists.txt  main.cmake
cmake/: main.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cmake
src/app/app_example/: CMakeLists.txt  main.cpp
src/interfaces/: itest.h
src/libs/: CMakeLists.txt  libs.cmake
src/libs/lib_shared/: CMakeLists.txt  lib_shared.cpp  lib_shared.h  lib_sharedglobal.h
src/libs/lib_shared/include/lib_shared/: lib_shared.h
src/plugins/: CMakeLists.txt  plugins.cmake
src/plugins/plug_example/: CMakeLists.txt  plug_example.cpp  plug_example.h
src/plugins/plug_example/include/plug_example/: plug_example.h
src/shared/: CMakeLists.txt  shared.cmake
src/shared/lib_static/: CMakeLists.txt  lib_static.cpp  lib_static.h
src/shared/lib_static/include/lib_static/: lib_static.h
tests/auto/: CMakeLists.txt
tests/auto/tst_example_auto/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt
tests/benchmarks/tst_example_prf/: CMakeLists.txt  main.cpp
tests/manual/: CMakeLists.txt  manual.cmake
tests/manual/tst_example_mnl/: CMakeLists.txt
